@@ -1,0 +1,5 @@
+<html>
+<body>
+Only following sections support callable arguments: input, params, threads, resources, group.
+</body>
+</html>
